# Assignment3

Client/: CMakeLists.txt  Client  CmakeLists.txt  CmakeLists3.txt  CmakeLists_copy.txt  makefile
Client/include/: ClientReceiver.h  Protocol.h  connectionHandler.h
Client/include/Builders/: AckCommandBuilder.h  BroadcastCommandBuilder.h  CommandBuilder.h  CommandBuilderFactory.h  DataCommandBuilder.h  TFTPErrorCommandBuilder.h
Client/include/Commands/: Ack.h  Broadcast.h  Command.h  Data.h  DeleteRequest.h  DirlistRequest.h  DisconnectRequest.h  LoginRequest.h  ReadRequest.h  Response.h  TFTPError.h  WriteRequest.h
Client/include/EncDec/: ShortEncoderDecoder.h  StringEncoderDecoder.h  TFTPEncoderDecoder.h
Client/include/Encoders/: AckCommandEncoder.h  CommandEncoder.h  CommandEncoderFactory.h  DataCommandEncoder.h  DeleteCommandEncoder.h  DirlistCommandEncoder.h  DisconnectCommandEncoder.h  EncoderUtils.h  LoginCommandEncoder.h  ReadCommandEncoder.h  TFTPErrorEncoder.h  WriteCommandEncoder.h
Client/src/: ClientReceiver.cpp  Protocol.cpp  connectionHandler.cpp  echoClient.cpp
Client/src/Builders/: AckCommandBuilder.cpp  BroadcastCommandBuilder.cpp  CommandBuilderFactory.cpp  DataCommandBuilder.cpp  TFTPErrorCommandBuilder.cpp
Client/src/Commands/: Ack.cpp  Broadcast.cpp  Data.cpp  DeleteRequest.cpp  DirlistRequest.cpp  DisconnectRequest.cpp  LoginRequest.cpp  ReadRequest.cpp  TFTPError.cpp  WriteRequest.cpp
Client/src/EncDec/: ShortEncoderDecoder.cpp  StringEncoderDecoder.cpp  TFTPEncoderDecoder.cpp
Client/src/Encoders/: AckCommandEncoder.cpp  CommandEncoderFactory.cpp  DataCommandEncoder.cpp  DeleteCommandEncoder.cpp  DirlistCommandEncoder.cpp  DisconnectCommandEncoder.cpp  EncoderUtils.cpp  LoginCommandEncoder.cpp  ReadCommandEncoder.cpp  TFTPErrorEncoder.cpp  WriteCommandEncoder.cpp
java to c++ builders/: AckCommandBuilder.cpp  AckCommandBuilder.h  BroadcastCommandBuilder.cpp  BroadcastCommandBuilder.h  CommandBuilder.cpp  CommandBuilder.h  DataCommandBuilder.cpp  DataCommandBuilder.h  DeleteRequestCommandBuilder.cpp  DeleteRequestCommandBuilder.h  DirlistBuilder.cpp  DirlistBuilder.h  LoginRequestCommandBuilder.cpp  LoginRequestCommandBuilder.h  ReadRequestCommandBuilder.cpp  ReadRequestCommandBuilder.h  TFTPErrorCommandBuilder.cpp  TFTPErrorCommandBuilder.h  WriteRequestCommandBuilder.cpp  WriteRequestCommandBuilder.h
java to c++ encdec/: ShortEncoderDecoder.cpp  ShortEncoderDecoder.h  StringEncoderDecoder.cpp  StringEncoderDecoder.h  (+2 more)
(+105 files in other folders)
